--- a/camera.kv
+++ b/camera.kv
@@ -1,6 +1,34 @@
 #:kivy 1.0
-<BoxLayoutW>:
+<MyLayout>:
+    orientation: 'vertical'
+    size: root.width, root.height
 
-    Button:
-        text: 'shot'
-        on_release: root.take_shot()
+    GridLayout:
+        rows: 2
+
+        RelativeLayout:
+            size_hint: 1, 0.8
+
+            AndroidCamera:
+                index: 0
+                id: a_cam
+                resolution: self.camera_resolution
+                allow_stretch: True
+                play: True
+                canvas.before:
+                    PushMatrix
+                    Rotate:
+                        angle: 0
+                        origin: self.center
+                    Scale:
+                        x: self.cam_ratio
+                        y: self.cam_ratio
+                        origin: self.center
+                canvas.after:
+                    PopMatrix
+
+        Label:
+            size_hint: 1, 0.2
+            id: frame_counter
+            font_size: self.height * 0.4
+            text: ''
